// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManagedRuleEditor/> auto-reply-faq-questions editor should render correctly 1`] = `
<div
  class="container"
>
  <div
    class="editorContainer"
  >
    <div
      class="container autoReplyFAQ"
    >
      <p>
        This rule detects shopper questions in incoming emails, replies with relevant articles from your help center, and closes the ticket. If shoppers reply, the ticket will reopen so you never miss a response.
      </p>
      <div
        class="alert error"
      >
        <div
          class="iconContainer"
        >
          <img
            alt="icon"
            src="test-file-stub"
          />
        </div>
        <div
          class="content"
        >
          <span
            class="label"
          >
            Your previously selected help center was deleted or deactivated. Please
             
            create
             a new one to reactivate this rule.
          </span>
        </div>
      </div>
      <div
        class="listWrapper"
      >
        <h4>
          Exclusion email list
        </h4>
        <p>
          Emails in the following list will never be replied to by this rule.
        </p>
        <div
          class="MultiSelectField blockList"
        >
          <div
            class="container"
          >
            <div
              class="inputContainer multiSelectOptionField-dropdown"
            >
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <input
                    autocomplete="off"
                    class="input"
                    placeholder="Add emails..."
                    value=""
                  />
                </div>
                <div
                  aria-hidden="true"
                  class="options dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <h6
                    class="dropdown-header"
                    tabindex="-1"
                  >
                    No result
                  </h6>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="listWrapper"
      >
        <h4>
          Message above article preview
        </h4>
        <div
          class="field"
        >
          <div
            class="textarea-toolbar"
          >
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Ticket customer
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
              </div>
            </div>
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Current agent
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Bio
                </button>
              </div>
            </div>
          </div>
          <div
            class="rich-textarea-wrapper"
          >
            <div
              class="editor-wrapper"
            >
              <div
                class="withMinHeight"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="public-DraftEditorPlaceholder-root"
                  >
                    <div
                      class="public-DraftEditorPlaceholder-inner"
                      id="placeholder-123"
                      style="white-space: pre-wrap;"
                    >
                      Type {{ for variables }}
                    </div>
                  </div>
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-autocomplete="list"
                      aria-describedby="placeholder-123"
                      aria-expanded="true"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="combobox"
                      spellcheck="true"
                      style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="123"
                          data-offset-key="123-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="123-0-0"
                          >
                            <span
                              data-offset-key="123-0-0"
                            >
                              <br
                                data-text="true"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editor-toolbar page"
            >
              <div
                class="actionsWrapper"
              >
                <div
                  class="actions"
                >
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_bold"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_italic"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_underline"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_underline
                    </i>
                  </button>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_link"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        link
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_photo"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_photo
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_emoticon"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_emoticon
                      </i>
                    </button>
                    <div
                      class="p-0 d-flex popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_shopify_product"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        shopify
                      </i>
                    </button>
                    <div
                      class="productLinkToolTip p-0 d-flex popover top-left hidden"
                    />
                  </span>
                </div>
                <div
                  class="hoverOverlay"
                >
                  Add files as attachments
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="listWrapper"
      >
        <h4>
          Message below article preview
        </h4>
        <div
          class="field"
        >
          <div
            class="textarea-toolbar"
          >
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Ticket customer
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
              </div>
            </div>
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Current agent
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Bio
                </button>
              </div>
            </div>
          </div>
          <div
            class="rich-textarea-wrapper"
          >
            <div
              class="editor-wrapper"
            >
              <div
                class="withMinHeight"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="public-DraftEditorPlaceholder-root"
                  >
                    <div
                      class="public-DraftEditorPlaceholder-inner"
                      id="placeholder-123"
                      style="white-space: pre-wrap;"
                    >
                      Type {{ for variables }}
                    </div>
                  </div>
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-autocomplete="list"
                      aria-describedby="placeholder-123"
                      aria-expanded="true"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="combobox"
                      spellcheck="true"
                      style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="123"
                          data-offset-key="123-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="123-0-0"
                          >
                            <span
                              data-offset-key="123-0-0"
                            >
                              <br
                                data-text="true"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editor-toolbar page"
            >
              <div
                class="actionsWrapper"
              >
                <div
                  class="actions"
                >
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_bold"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_italic"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_underline"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_underline
                    </i>
                  </button>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_link"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        link
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_photo"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_photo
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_emoticon"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_emoticon
                      </i>
                    </button>
                    <div
                      class="p-0 d-flex popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_shopify_product"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        shopify
                      </i>
                    </button>
                    <div
                      class="productLinkToolTip p-0 d-flex popover top-left hidden"
                    />
                  </span>
                </div>
                <div
                  class="hoverOverlay"
                >
                  Add files as attachments
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="toggleButtonContainer"
    >
      <span>
        <div>
          <label
            aria-checked="true"
            class="label label"
            for="toggle-button-3"
            role="switch"
          >
            <input
              checked=""
              class="input"
              disabled=""
              id="toggle-button-3"
              name="toggle-button-3"
              type="checkbox"
            />
            <div
              class="slider"
            />
          </label>
        </div>
      </span>
      <span>
        <label
          class="toggleLabel mr-2 mb-0"
        >
          Enable rule
        </label>
      </span>
    </div>
    <div
      class="buttons-container"
    >
      <div>
        <button
          class="wrapper fill primary medium isDisabled"
          disabled=""
          form="rule-form"
          id="rule-item-save"
          type="button"
        >
          Update rule
        </button>
      </div>
      <div>
        <button
          class="wrapper fill destructive medium"
          id="rule-item-delete"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              delete
            </i>
            Delete rule
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="demoContainer"
    style="height: 0px;"
  >
    <div
      class="demo autoReplyFAQ"
    >
      <div
        class="topbar"
      >
        <div
          class="circle"
        />
        <div
          class="circle"
        />
        <div
          class="circle"
        />
      </div>
      <div
        class="demoContent"
      >
        <div
          class="textdata"
        >
          <div>
            <div
              class="previewLegend"
            >
              Message above article preview
            </div>
            <div
              class="previewBodyWrapper"
            >
              <div
                class="rich-textarea-wrapper display-only"
              >
                <div
                  class="editor-wrapper"
                >
                  <div
                    class="withMinHeight"
                  >
                    <div
                      class="DraftEditor-root"
                    >
                      <div
                        class="DraftEditor-editorContainer"
                      >
                        <div
                          aria-describedby="placeholder-123"
                          class="public-DraftEditor-content"
                          contenteditable="false"
                          spellcheck="false"
                          style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                        >
                          <div
                            data-contents="true"
                          >
                            <div
                              class=""
                              data-block="true"
                              data-editor="123"
                              data-offset-key="123-0-0"
                            >
                              <div
                                class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                data-offset-key="123-0-0"
                              >
                                <span
                                  data-offset-key="123-0-0"
                                >
                                  <br
                                    data-text="true"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="editor-toolbar page"
                >
                  <div
                    class="actionsWrapper"
                  >
                    <div
                      class="actions"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_bold"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_bold
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_italic"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_italic
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_underline"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_underline
                        </i>
                      </button>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_link"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            link
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_photo"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_photo
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_emoticon"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_emoticon
                          </i>
                        </button>
                        <div
                          class="p-0 d-flex popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_shopify_product"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            shopify
                          </i>
                        </button>
                        <div
                          class="productLinkToolTip p-0 d-flex popover top-left hidden"
                        />
                      </span>
                    </div>
                    <div
                      class="hoverOverlay"
                    >
                      Add files as attachments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="container FAQArticle"
          >
            <div
              class="articleTitle"
            >
              What size should I order?
            </div>
            <p
              class="articleDescription"
            >
              Unsure what size will work? Check out our sizing guide located above the sizes offered on each product page for exact measure...
            </p>
            <span
              class="articleLink"
            >
              Read More
            </span>
          </div>
          <div
            class="container FAQArticle"
          >
            <div
              class="articleTitle"
            >
              What shoe size should I buy?
            </div>
            <p
              class="articleDescription"
            >
              We recommend looking at the product details on the product page for each item for specific fit information. Each style will have...
            </p>
            <span
              class="articleLink"
            >
              Read More
            </span>
          </div>
          <div
            class="container FAQArticle"
          >
            <div
              class="articleTitle"
            >
              What size am I in your denim?
            </div>
            <p
              class="articleDescription"
            >
              Take a look at our denim size guide for measurement instructions and keep in mind that the fabric will relax during the first...
            </p>
            <span
              class="articleLink"
            >
              Read More
            </span>
          </div>
          <div>
            <div
              class="previewLegend"
            >
              Message below article preview
            </div>
            <div
              class="previewBodyWrapper"
            >
              <div
                class="rich-textarea-wrapper display-only"
              >
                <div
                  class="editor-wrapper"
                >
                  <div
                    class="withMinHeight"
                  >
                    <div
                      class="DraftEditor-root"
                    >
                      <div
                        class="DraftEditor-editorContainer"
                      >
                        <div
                          aria-describedby="placeholder-123"
                          class="public-DraftEditor-content"
                          contenteditable="false"
                          spellcheck="false"
                          style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                        >
                          <div
                            data-contents="true"
                          >
                            <div
                              class=""
                              data-block="true"
                              data-editor="123"
                              data-offset-key="123-0-0"
                            >
                              <div
                                class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                data-offset-key="123-0-0"
                              >
                                <span
                                  data-offset-key="123-0-0"
                                >
                                  <br
                                    data-text="true"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="editor-toolbar page"
                >
                  <div
                    class="actionsWrapper"
                  >
                    <div
                      class="actions"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_bold"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_bold
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_italic"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_italic
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_underline"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_underline
                        </i>
                      </button>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_link"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            link
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_photo"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_photo
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_emoticon"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_emoticon
                          </i>
                        </button>
                        <div
                          class="p-0 d-flex popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_shopify_product"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            shopify
                          </i>
                        </button>
                        <div
                          class="productLinkToolTip p-0 d-flex popover top-left hidden"
                        />
                      </span>
                    </div>
                    <div
                      class="hoverOverlay"
                    >
                      Add files as attachments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ManagedRuleEditor/> auto-reply-wismo editor should render correctly 1`] = `
<div
  class="container"
>
  <div
    class="editorContainer"
  >
    <div
      class="container autoReplyWismo"
    >
      <p>
        This rule detects emails related to order status or tracking, replies with tracking links for the shopper’s last 3 orders, and auto-closes the ticket. If shoppers reply, the ticket will reopen so you never miss a response.
      </p>
      <div
        class="listWrapper"
      >
        <h4>
          Exclusion email list
        </h4>
        <p>
          This rule will never trigger on incoming emails from the addresses below.
        </p>
        <div
          class="MultiSelectField blockList"
        >
          <div
            class="container"
          >
            <div
              class="inputContainer multiSelectOptionField-dropdown"
            >
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <input
                    autocomplete="off"
                    class="input"
                    placeholder="Add emails..."
                    value=""
                  />
                </div>
                <div
                  aria-hidden="true"
                  class="options dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <h6
                    class="dropdown-header"
                    tabindex="-1"
                  >
                    No result
                  </h6>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="listWrapper"
      >
        <h4>
          Message above tracking links
        </h4>
        <div
          class="field"
        >
          <div
            class="textarea-toolbar"
          >
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Ticket customer
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
              </div>
            </div>
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Current agent
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Bio
                </button>
              </div>
            </div>
          </div>
          <div
            class="rich-textarea-wrapper"
          >
            <div
              class="editor-wrapper"
            >
              <div
                class="withMinHeight"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="public-DraftEditorPlaceholder-root"
                  >
                    <div
                      class="public-DraftEditorPlaceholder-inner"
                      id="placeholder-123"
                      style="white-space: pre-wrap;"
                    >
                      Type {{ for variables }}
                    </div>
                  </div>
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-autocomplete="list"
                      aria-describedby="placeholder-123"
                      aria-expanded="true"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="combobox"
                      spellcheck="true"
                      style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="123"
                          data-offset-key="123-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="123-0-0"
                          >
                            <span
                              data-offset-key="123-0-0"
                            >
                              <br
                                data-text="true"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editor-toolbar page"
            >
              <div
                class="actionsWrapper"
              >
                <div
                  class="actions"
                >
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_bold"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_italic"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_underline"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_underline
                    </i>
                  </button>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_link"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        link
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_photo"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_photo
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_emoticon"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_emoticon
                      </i>
                    </button>
                    <div
                      class="p-0 d-flex popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_shopify_product"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        shopify
                      </i>
                    </button>
                    <div
                      class="productLinkToolTip p-0 d-flex popover top-left hidden"
                    />
                  </span>
                </div>
                <div
                  class="hoverOverlay"
                >
                  Add files as attachments
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="listWrapper"
      >
        <h4>
          Message below tracking links
        </h4>
        <div
          class="field"
        >
          <div
            class="textarea-toolbar"
          >
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Ticket customer
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
              </div>
            </div>
            <div
              class="btn-group"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn-sm mr-2 dropdown-toggle btn btn-secondary"
                type="button"
              >
                Current agent
              </button>
              <div
                aria-hidden="true"
                class="dropdown-menu"
                role="menu"
                tabindex="-1"
              >
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  First name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Last name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Full name
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Email
                </button>
                <button
                  class="dropdown-item"
                  role="menuitem"
                  tabindex="0"
                  type="button"
                >
                  Bio
                </button>
              </div>
            </div>
          </div>
          <div
            class="rich-textarea-wrapper"
          >
            <div
              class="editor-wrapper"
            >
              <div
                class="withMinHeight"
              >
                <div
                  class="DraftEditor-root"
                >
                  <div
                    class="public-DraftEditorPlaceholder-root"
                  >
                    <div
                      class="public-DraftEditorPlaceholder-inner"
                      id="placeholder-123"
                      style="white-space: pre-wrap;"
                    >
                      Type {{ for variables }}
                    </div>
                  </div>
                  <div
                    class="DraftEditor-editorContainer"
                  >
                    <div
                      aria-autocomplete="list"
                      aria-describedby="placeholder-123"
                      aria-expanded="true"
                      class="notranslate public-DraftEditor-content"
                      contenteditable="true"
                      role="combobox"
                      spellcheck="true"
                      style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                    >
                      <div
                        data-contents="true"
                      >
                        <div
                          class=""
                          data-block="true"
                          data-editor="123"
                          data-offset-key="123-0-0"
                        >
                          <div
                            class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                            data-offset-key="123-0-0"
                          >
                            <span
                              data-offset-key="123-0-0"
                            >
                              <br
                                data-text="true"
                              />
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editor-toolbar page"
            >
              <div
                class="actionsWrapper"
              >
                <div
                  class="actions"
                >
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_bold"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_bold
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_italic"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_italic
                    </i>
                  </button>
                  <button
                    class="wrapper button wrapper small fill secondary small"
                    id="format_underline"
                    type="button"
                  >
                    <i
                      class="material-icons icon"
                    >
                      format_underline
                    </i>
                  </button>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_link"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        link
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_photo"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_photo
                      </i>
                    </button>
                    <div
                      class="popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_emoticon"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        insert_emoticon
                      </i>
                    </button>
                    <div
                      class="p-0 d-flex popover top-left hidden"
                    />
                  </span>
                  <span
                    class="popoverWrapper"
                  >
                    <button
                      class="wrapper button wrapper small fill secondary small"
                      id="insert_shopify_product"
                      type="button"
                    >
                      <i
                        class="material-icons icon"
                      >
                        shopify
                      </i>
                    </button>
                    <div
                      class="productLinkToolTip p-0 d-flex popover top-left hidden"
                    />
                  </span>
                </div>
                <div
                  class="hoverOverlay"
                >
                  Add files as attachments
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="toggleButtonContainer"
    >
      <span>
        <div>
          <label
            aria-checked="true"
            class="label label"
            for="toggle-button-2"
            role="switch"
          >
            <input
              checked=""
              class="input"
              disabled=""
              id="toggle-button-2"
              name="toggle-button-2"
              type="checkbox"
            />
            <div
              class="slider"
            />
          </label>
        </div>
      </span>
      <span>
        <label
          class="toggleLabel mr-2 mb-0"
        >
          Enable rule
        </label>
      </span>
    </div>
    <div
      class="buttons-container"
    >
      <div>
        <button
          class="wrapper fill primary medium isDisabled"
          disabled=""
          form="rule-form"
          id="rule-item-save"
          type="button"
        >
          Update rule
        </button>
      </div>
      <div>
        <button
          class="wrapper fill destructive medium"
          id="rule-item-delete"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              delete
            </i>
            Delete rule
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="demoContainer"
    style="height: 0px;"
  >
    <div
      class="demo autoReplyWismo"
    >
      <div
        class="topbar"
      >
        <div
          class="circle"
        />
        <div
          class="circle"
        />
        <div
          class="circle"
        />
      </div>
      <div
        class="demoContent"
      >
        <div
          class="textdata"
        >
          <div>
            <div
              class="previewLegend"
            >
              Message above tracking links
            </div>
            <div
              class="previewBodyWrapper"
            >
              <div
                class="rich-textarea-wrapper display-only"
              >
                <div
                  class="editor-wrapper"
                >
                  <div
                    class="withMinHeight"
                  >
                    <div
                      class="DraftEditor-root"
                    >
                      <div
                        class="DraftEditor-editorContainer"
                      >
                        <div
                          aria-describedby="placeholder-123"
                          class="public-DraftEditor-content"
                          contenteditable="false"
                          spellcheck="false"
                          style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                        >
                          <div
                            data-contents="true"
                          >
                            <div
                              class=""
                              data-block="true"
                              data-editor="123"
                              data-offset-key="123-0-0"
                            >
                              <div
                                class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                data-offset-key="123-0-0"
                              >
                                <span
                                  data-offset-key="123-0-0"
                                >
                                  <br
                                    data-text="true"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="editor-toolbar page"
                >
                  <div
                    class="actionsWrapper"
                  >
                    <div
                      class="actions"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_bold"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_bold
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_italic"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_italic
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_underline"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_underline
                        </i>
                      </button>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_link"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            link
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_photo"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_photo
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_emoticon"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_emoticon
                          </i>
                        </button>
                        <div
                          class="p-0 d-flex popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_shopify_product"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            shopify
                          </i>
                        </button>
                        <div
                          class="productLinkToolTip p-0 d-flex popover top-left hidden"
                        />
                      </span>
                    </div>
                    <div
                      class="hoverOverlay"
                    >
                      Add files as attachments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="container orderTracking"
          >
            <div
              class="orderTitleContainer"
            >
              <div
                class="orderTitle"
              >
                Order number
              </div>
              <div
                class="orderPrice"
              >
                Price
              </div>
            </div>
            <div
              class="fulfillmentContainer"
            >
              <div
                class="product"
              >
                <div
                  class="productTitle"
                >
                  Product 1
                </div>
                <div
                  class="productPrice"
                >
                  Price x1
                </div>
              </div>
              <div
                class="product"
              >
                <div
                  class="productTitle"
                >
                  Product 2
                </div>
                <div
                  class="productPrice"
                >
                  Price x2
                </div>
              </div>
              <div
                class="trackingLink"
              >
                loremipsum.com/tracking-1234
              </div>
            </div>
            <div
              class="fulfillmentContainer"
            >
              <div
                class="product"
              >
                <div
                  class="productTitle"
                >
                  Product 3
                </div>
                <div
                  class="productPrice"
                >
                  Price x1
                </div>
              </div>
              <div
                class="trackingLink"
              >
                loremipsum.com/tracking-4321
              </div>
            </div>
          </div>
          <div>
            <div
              class="previewLegend"
            >
              Message below tracking links
            </div>
            <div
              class="previewBodyWrapper"
            >
              <div
                class="rich-textarea-wrapper display-only"
              >
                <div
                  class="editor-wrapper"
                >
                  <div
                    class="withMinHeight"
                  >
                    <div
                      class="DraftEditor-root"
                    >
                      <div
                        class="DraftEditor-editorContainer"
                      >
                        <div
                          aria-describedby="placeholder-123"
                          class="public-DraftEditor-content"
                          contenteditable="false"
                          spellcheck="false"
                          style="outline: none; user-select: text; white-space: pre-wrap; word-wrap: break-word;"
                        >
                          <div
                            data-contents="true"
                          >
                            <div
                              class=""
                              data-block="true"
                              data-editor="123"
                              data-offset-key="123-0-0"
                            >
                              <div
                                class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                data-offset-key="123-0-0"
                              >
                                <span
                                  data-offset-key="123-0-0"
                                >
                                  <br
                                    data-text="true"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="editor-toolbar page"
                >
                  <div
                    class="actionsWrapper"
                  >
                    <div
                      class="actions"
                    >
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_bold"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_bold
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_italic"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_italic
                        </i>
                      </button>
                      <button
                        class="wrapper button wrapper small fill secondary small"
                        id="format_underline"
                        type="button"
                      >
                        <i
                          class="material-icons icon"
                        >
                          format_underline
                        </i>
                      </button>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_link"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            link
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_photo"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_photo
                          </i>
                        </button>
                        <div
                          class="popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_emoticon"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            insert_emoticon
                          </i>
                        </button>
                        <div
                          class="p-0 d-flex popover top-left hidden"
                        />
                      </span>
                      <span
                        class="popoverWrapper"
                      >
                        <button
                          class="wrapper button wrapper small fill secondary small"
                          id="insert_shopify_product"
                          type="button"
                        >
                          <i
                            class="material-icons icon"
                          >
                            shopify
                          </i>
                        </button>
                        <div
                          class="productLinkToolTip p-0 d-flex popover top-left hidden"
                        />
                      </span>
                    </div>
                    <div
                      class="hoverOverlay"
                    >
                      Add files as attachments
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ManagedRuleEditor/> non-support-related-emails editor should render correctly 1`] = `
<div
  class="container"
>
  <div
    class="editorContainer"
  >
    <div
      class="container"
    >
      <p
        class="mb-4"
      >
        This rule detects and closes irrelevant emails that don’t require a response such as newsletters and spam to save you time filtering through tickets.
      </p>
      <div
        class="alert info"
      >
        <div
          class="iconContainer"
        >
          <img
            alt="icon"
            src="test-file-stub"
          />
        </div>
        <div
          class="content"
        >
          <span
            class="label"
          >
            Keep this rule at the top of your rules to ensure it triggers first, preventing irrelevant billable tickets.
          </span>
        </div>
      </div>
      <div
        class="listWrapper"
      >
        <h4>
          Email exclusion list
        </h4>
        <p>
          This rule will never trigger on incoming emails from the addresses below.
        </p>
        <div
          class="MultiSelectField allowList"
        >
          <div
            class="container"
          >
            <div
              class="inputContainer multiSelectOptionField-dropdown"
            >
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <input
                    autocomplete="off"
                    class="input"
                    placeholder="Add emails..."
                    value=""
                  />
                </div>
                <div
                  aria-hidden="true"
                  class="options dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <h6
                    class="dropdown-header"
                    tabindex="-1"
                  >
                    No result
                  </h6>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="listWrapper"
      >
        <h4>
          Always apply list
        </h4>
        <p>
          Emails in the following list will 
          <b>
            always be closed
          </b>
           by this rule.
        </p>
        <div
          class="MultiSelectField blockList"
        >
          <div
            class="container"
          >
            <div
              class="inputContainer multiSelectOptionField-dropdown"
            >
              <div
                class="dropdown"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="true"
                  class=""
                  data-toggle="dropdown"
                >
                  <input
                    autocomplete="off"
                    class="input"
                    placeholder="Add emails..."
                    value=""
                  />
                </div>
                <div
                  aria-hidden="true"
                  class="options dropdown-menu"
                  role="menu"
                  tabindex="-1"
                >
                  <h6
                    class="dropdown-header"
                    tabindex="-1"
                  >
                    No result
                  </h6>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="toggleButtonContainer"
    >
      <span>
        <div>
          <label
            aria-checked="true"
            class="label label"
            for="toggle-button-1"
            role="switch"
          >
            <input
              checked=""
              class="input"
              disabled=""
              id="toggle-button-1"
              name="toggle-button-1"
              type="checkbox"
            />
            <div
              class="slider"
            />
          </label>
        </div>
      </span>
      <span>
        <label
          class="toggleLabel mr-2 mb-0"
        >
          Enable rule
        </label>
      </span>
    </div>
    <div
      class="buttons-container"
    >
      <div>
        <button
          class="wrapper fill primary medium isDisabled"
          disabled=""
          form="rule-form"
          id="rule-item-save"
          type="button"
        >
          Update rule
        </button>
      </div>
      <div>
        <button
          class="wrapper fill destructive medium"
          id="rule-item-delete"
          type="button"
        >
          <span
            class="wrapper"
          >
            <i
              class="material-icons icon isLeft medium"
            >
              delete
            </i>
            Delete rule
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="demoContainer"
    style="height: 0px;"
  >
    <div
      class="container"
    >
      <div
        class="fakeTicket"
      >
        <div
          class="fakeTicketTitleWrapper"
        >
          <span
            class="fakeTicketTitle"
          >
            Newsletter
          </span>
          <div
            class="badge fakeTicketClosed"
            style="background-color: rgb(255, 234, 234); color: rgb(163, 46, 46);"
          >
            closed
          </div>
        </div>
        <div
          class="fakeTicketDescription"
        >
          Check out our new product!
        </div>
      </div>
      <div
        class="fakeTicket"
      >
        <div
          class="fakeTicketTitleWrapper"
        >
          <span
            class="fakeTicketTitle"
          >
            Product question
          </span>
        </div>
        <div
          class="fakeTicketDescription"
        >
          I have ordered...
        </div>
      </div>
      <div
        class="fakeTicket"
      >
        <div
          class="fakeTicketTitleWrapper"
        >
          <span
            class="fakeTicketTitle"
          >
            Promotion! -50%...
          </span>
          <div
            class="badge fakeTicketClosed"
            style="background-color: rgb(255, 234, 234); color: rgb(163, 46, 46);"
          >
            closed
          </div>
        </div>
        <div
          class="fakeTicketDescription"
        >
          Until Monday all of our products...
        </div>
      </div>
    </div>
  </div>
</div>
`;
